--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "source": "index.html",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "directories": {
     "doc": "docs"
   },
