--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0",
     "sass": "^1.79.1"
+  },
+  "volta": {
+    "node": "20.17.0",
+    "npm": "10.8.3"
   }
 }
