--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "targets": {
     "default": {
-      "distDir": "./public"
+      "distDir": "./dist"
     }
   },
   "browserslist": "> 0.5%",
