update package json for vercel

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "source": "index.html",
   "version": "1.0.0",
   "description": "",
+  "main": "./src/assets/js/index.js",
   "targets": {
     "default": {
       "distDir": "./dist"
